{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 14,
  "lineage": "8da5f603-89c2-fd6f-6724-2f68c0c5a43e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d5e11b400debd06",
            "domain": "vpc",
            "id": "eipalloc-07d5e11b400debd06",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-218-251-185.compute-1.amazonaws.com",
            "public_ip": "3.218.251.185",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-instance",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02675d30b814d1daa",
            "arn": "arn:aws:ec2:us-east-1:721015883085:instance/i-02edb23c9b9fe28f2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02edb23c9b9fe28f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b69b0ea5f9b5523c",
            "private_dns": "ip-10-0-1-140.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.140",
            "public_ip": "34.235.161.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02d03b76a9f785fd4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b983b5f6813a55f",
            "tags": {
              "Name": "private-instance"
            },
            "tags_all": {
              "Name": "private-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087f24f538f425a88"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnets",
            "aws_vpc.sprints_vpc",
            "data.aws_ami.amazon_ec2"
          ]
        },
        {
          "index_key": "public-instance",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02675d30b814d1daa",
            "arn": "arn:aws:ec2:us-east-1:721015883085:instance/i-0aed2a4291a3ec0e0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aed2a4291a3ec0e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e44e1979ed38fb31",
            "private_dns": "ip-10-0-0-40.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.40",
            "public_ip": "3.80.176.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d192446a441fb55b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049fb4315f3ab189a",
            "tags": {
              "Name": "public-instance"
            },
            "tags_all": {
              "Name": "public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087f24f538f425a88"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnets",
            "aws_vpc.sprints_vpc",
            "data.aws_ami.amazon_ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721015883085:internet-gateway/igw-04262022d5760e10a",
            "id": "igw-04262022d5760e10a",
            "owner_id": "721015883085",
            "tags": {
              "Name": "sprints-igw"
            },
            "tags_all": {
              "Name": "sprints-igw"
            },
            "vpc_id": "vpc-04d050d3e7cc4d134"
          },
          "dependencies": [
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d5e11b400debd06",
            "association_id": "eipassoc-003bc75c87554a281",
            "connectivity_type": "public",
            "id": "nat-0cfbb88b1d7148b1c",
            "network_interface_id": "eni-07bd2513b4f5a9562",
            "private_ip": "10.0.0.193",
            "public_ip": "3.218.251.185",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-049fb4315f3ab189a",
            "tags": {
              "Name": "sprints-NAT"
            },
            "tags_all": {
              "Name": "sprints-NAT"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.subnets",
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721015883085:route-table/rtb-0eab1676f650c74a8",
            "id": "rtb-0eab1676f650c74a8",
            "owner_id": "721015883085",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cfbb88b1d7148b1c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private RT"
            },
            "tags_all": {
              "Name": "private RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d050d3e7cc4d134"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_subnet.subnets",
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721015883085:route-table/rtb-066d537b846c5fb4a",
            "id": "rtb-066d537b846c5fb4a",
            "owner_id": "721015883085",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04262022d5760e10a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public RT"
            },
            "tags_all": {
              "Name": "public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d050d3e7cc4d134"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c95066b8d4c7a19",
            "route_table_id": "rtb-0eab1676f650c74a8",
            "subnet_id": "subnet-00b983b5f6813a55f"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.subnets",
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05656654213e9e3b4",
            "route_table_id": "rtb-066d537b846c5fb4a",
            "subnet_id": "subnet-049fb4315f3ab189a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.subnets",
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721015883085:security-group/sg-087f24f538f425a88",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087f24f538f425a88",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sprints SG",
            "name_prefix": "",
            "owner_id": "721015883085",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04d050d3e7cc4d134"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721015883085:subnet/subnet-00b983b5f6813a55f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b983b5f6813a55f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721015883085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-Sub"
            },
            "tags_all": {
              "Name": "private-Sub"
            },
            "vpc_id": "vpc-04d050d3e7cc4d134"
          },
          "dependencies": [
            "aws_vpc.sprints_vpc"
          ]
        },
        {
          "index_key": "public-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721015883085:subnet/subnet-049fb4315f3ab189a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049fb4315f3ab189a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721015883085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-Sub"
            },
            "tags_all": {
              "Name": "public-Sub"
            },
            "vpc_id": "vpc-04d050d3e7cc4d134"
          },
          "dependencies": [
            "aws_vpc.sprints_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sprints_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:721015883085:vpc/vpc-04d050d3e7cc4d134",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09f89d6bb57d72f58",
            "default_route_table_id": "rtb-0f2f182763e3089fd",
            "default_security_group_id": "sg-014270ed1a61ed5d1",
            "dhcp_options_id": "dopt-0bcf9fc5813a97f76",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d050d3e7cc4d134",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2f182763e3089fd",
            "owner_id": "721015883085",
            "tags": {
              "Name": "sprints"
            },
            "tags_all": {
              "Name": "sprints"
            }
          }
        }
      ]
    }
  ]
}